use-cases/traffic-management/base/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-service-v2
  namespace: asm-usecase
spec:
  selector:
    matchLabels:
      app: hello-service
      version: v2
  template:
    metadata:
      labels:
        app: hello-service
        version: v2
    spec:
      containers:
        - name: hello-service
          image: nicholasjackson/fake-service:v0.26.0
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              port: 8080
              path: /ready
          livenessProbe:
            httpGet:
              port: 8080
              path: /health
          ports:
            - name: http
              containerPort: 8080
          resources:
            limits:
              cpu: 150m
              memory: 256Mi
            requests:
              cpu: 25m
              memory: 128Mi
