use-cases/traffic-management/base/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hello-service
  namespace: asm-usecase
spec:
  hosts:
    - 'usecase.anthos.gcp-demo.be-svc.at'
  gateways:
    - my-gateway
  http:
    - name: hello-service-v1
      route:
        - destination:
            host: hello-service.asm-usecase.svc.cluster.local
            subset: v1
          weight: 100
